# lance-research

./: .gitignore  README.md  localhw.info
file_2_1/: README.md
file_2_1/chart-scripts/: coalesce_chart.py  disk_perf.py  lance_scan_disk.py  nesting.py  packed.py  parquet_encoding.py  parquet_page_chart.py  parquet_row_group.py  parquet_scan_disk.py  parquet_scan_page.py  parquet_vs_lance_scan.py  sized_scan.py  sized_take.py  take_lance.py  take_parquet.py  uncompression_chart.py
file_2_1/data/real/: README.md
file_2_1/experiments/compression/: repr.py
file_2_1/experiments/compression/datafiles/: README.md  code.parquet  code_trimmed.parquet  dates_trimmed.parquet  names.parquet  names_trimmed.parquet  prompts.parquet  prompts_trimmed.parquet  reviews.parquet  reviews_trimmed.parquet  websites.parquet  websites_trimmed.parquet
file_2_1/experiments/fsprof/: Cargo.toml  README.md  hdd_results.csv  s3_express_five_results.csv  s3_express_results.csv  s3_five_results.csv
file_2_1/experiments/fsprof/scripts/: chart.py
file_2_1/experiments/fsprof/src/: local.rs  s3.rs
file_2_1/experiments/miniblock-fullzip-threshold/: experiment.py
file_2_1/experiments/random-arrow/: perf.data
file_2_1/experiments/random-arrow/random_arrow/: experiment.py
file_2_1/experiments/random-by-nesting-depth/: experiment.py
file_2_1/experiments/random-take/: Cargo.toml  README.md  baseline.csv  baseline.py  benchmark.py  benchmark_lance.py  benchmark_nesting.py  benchmark_packed.py  benchmark_parquet.py  benchmark_parquet_encoding.py  benchmark_parquet_page.py  benchmark_sized.py  both_chart.py  chart.py  coalesce.csv  coalesce_chart.py  compression_chart.py  lance_chart.py  lance_full_scan.csv  lance_local.csv  lance_old_take.csv  lance_old_take.py  lance_scan_disk.py  lance_take.csv  lance_take.py  local.csv  nesting.csv  nesting.py  nesting_s3.csv  packed.py  packed_take.csv  parquet_chart.py  parquet_chart_small.py  parquet_encoding.py  parquet_full_scan.csv  parquet_local.csv  parquet_page_chart.py  parquet_row_group.py  parquet_scan_chart.py  parquet_scan_disk.py  (+19 more)
file_2_1/experiments/random-take/src/: datagen.rs  full_scan.rs  lance.rs  lib.rs  main.rs  osutil.rs  page_count.rs  parq.rs  take.rs  threading.rs  uncompressed.rs  util.rs
file_2_1/experiments/random-take/src/parq/: io.rs
file_2_1/paper/: README.md  main.bib  main.tex
file_2_1/results/: fsprof_disk_results.csv  fsprof_s3_results.csv  lance_full_scan.csv  nesting.csv  packed_scan.csv  packed_take.csv  parquet_encoding.csv  sized.csv  sized_scan.csv  take_lance.csv  uncompressed.csv
introductory/: README.md
introductory/experiments/: README.md
introductory/experiments/datasets/laion_5b/: images.py  loader.py  requirements.txt
introductory/experiments/late_materialization/: .gitignore  Cargo.toml  Makefile  bench.py  common.py  datagen.py  io_results.csv  metered_fs.py  postprocess.py  requirements.txt  runtime_results.csv  test_data.py
introductory/experiments/late_materialization/src/: lib.rs  metered_store.rs
introductory/experiments/overall_scans/: .gitignore  Makefile  bench.py  compare_sizes.py  datagen.py  postprocess.py  readme.md  readme.qmd  requirements.txt  results.csv  tpch_bench.py  tpch_datagen.py
introductory/experiments/random-take/: Cargo.toml  benchmark.py  local.csv  nfs.csv
introductory/experiments/random-take/src/: lib.rs  main.rs
introductory/figures/: lance_table.excalidraw  lance_v1_file.exalidraw
introductory/paper/: .gitignore  Makefile  bibliography.bib  design.qmd  experiments.qmd  intro.qmd  paper.qmd  related_work.qmd  table_workaround.tex
introductory/paper/_extensions/quarto-journals/acm/: acmart.cls
random-take/experiments/parquet-rs-take/: Cargo.toml  benchmark.py
random-take/experiments/parquet-rs-take/benches/: random_take.rs
random-take/experiments/parquet-rs-take/src/: lib.rs  main.rs
