[package]
name = "random-take-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow-array = "52.2.0"
arrow-schema = "52.2.0"
async-trait = "0.1.77"
bytes = "1.5.0"
clap = { version = "4.4.12", features = ["derive"] }
env_logger = "0.11.5"
futures = "0.3.29"
glob = "0.3.1"
lance = { version = "0.19.1", path = "/home/pace/dev/lance/rust/lance" }
lance-core = { version = "0.19.1", path = "/home/pace/dev/lance/rust/lance-core" }
lance-datagen = { version = "0.19.1", path = "/home/pace/dev/lance/rust/lance-datagen" }
lance-encoding = { version = "0.19.1", path = "/home/pace/dev/lance/rust/lance-encoding" }
lance-file = { version = "0.19.1", path = "/home/pace/dev/lance/rust/lance-file" }
lance-io = { version = "0.19.1", path = "/home/pace/dev/lance/rust/lance-io" }
object_store = { version = "0.10.2", features = ["aws"] }
once_cell = "1.19.0"
parquet = { version = "52.2.0", features = ["async"] }
rand = "0.8.5"
tokio = { version = "1.35.1", features = [
    "rt-multi-thread",
    "macros",
    "io-util",
    "io-std",
    "fs",
] }
url = "2.5.0"
