[package]
name = "late_materialization"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "late_materialization"
crate-type = ["cdylib"]

# These are pinned for the sake of reproducibility.
[dependencies]
datafusion = "=34.0.0"
object_store = "=0.8.0"
tokio = { version = "=1.28.0", features = ["rt-multi-thread"] }
pyo3 = { version = "=0.20.1", features = ["extension-module"] }
lazy_static = "=1.4.0"
futures = "=0.3.15"