[package]
name = "parquet-rs-take"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow-array = "49.0.0"
arrow-schema = "49.0.0"
bytes = "1.5.0"
clap = { version = "4.4.12", features = ["derive"] }
futures = "0.3.29"
glob = "0.3.1"
lance = "0.9.1"
object_store = { version = "0.8.0", features = ["aws"] }
parquet = { version = "49.0.0", features = ["async"] }
rand = "0.8.5"
tokio = { version = "1.35.1", features = [
    "rt-multi-thread",
    "macros",
    "io-util",
    "io-std",
    "fs",
] }
url = "2.5.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async", "tokio", "async_tokio"] }

[[bench]]
name = "random_take"
harness = false
